--- a/src/main/resources/templates/surgeon/list.html
+++ b/src/main/resources/templates/surgeon/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Surgeons List</title>
+  <title>Surgeons</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -41,6 +41,7 @@
       </form>
     </div>
   </div>
+
 
   <div class="table-responsive">
     <table class="table table-striped">
