--- a/src/main/resources/templates/admin/reports/select.html
+++ b/src/main/resources/templates/admin/reports/select.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Reports - Admin</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">Surgeon Preferences</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/surgeons">Surgeons</a>
+                </li>
+                <li sec:authorize="hasRole('ADMIN')">
+                    <a th:href="@{/admin/users}" class="nav-link">Admin Dashboard</a>
+                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="/surgeons/new">Add Surgeon</a>-->
+<!--                </li>-->
+            </ul>
+            <form th:action="@{/logout}" method="post" class="d-flex">
+                <button class="btn btn-outline-light" type="submit">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container mt-4">
     <h2>Available Reports</h2>
 
@@ -18,13 +42,13 @@
                     <div class="list-group">
                         <a href="/admin/reports/print/surgeons" class="list-group-item list-group-item-action">
                             <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Surgeons Report</h5>
+                                <h5 class="mb-1">All Surgeons Report</h5>
                             </div>
                             <p class="mb-1">List of all surgeons and their preference cards</p>
                         </a>
                         <a href="/admin/reports/print/users" class="list-group-item list-group-item-action">
                             <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Users Report</h5>
+                                <h5 class="mb-1">All Users Report</h5>
                             </div>
                             <p class="mb-1">List of all system users and their roles</p>
                         </a>
