--- a/src/main/resources/templates/admin/user-detail.html
+++ b/src/main/resources/templates/admin/user-detail.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>User Details</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">Surgeon Preferences</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/surgeons">Surgeons</a>
+                </li>
+                <li sec:authorize="hasRole('ADMIN')">
+                    <a th:href="@{/admin/users}" class="nav-link">Admin Dashboard</a>
+                </li>
+            </ul>
+
+            <form th:action="@{/logout}" method="post" class="d-flex">
+                <button class="btn btn-outline-light" type="submit">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container mt-4">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -23,6 +47,9 @@
                     <dl class="row">
                         <dt class="col-sm-4">Username:</dt>
                         <dd class="col-sm-8" th:text="${user.username}">username</dd>
+
+                        <dt class="col-sm-4">Name</dt>
+                        <dd class="col-sm-8" th:text="${user.firstName+' '+user.lastName}">username</dd>
 
                         <dt class="col-sm-4">Email:</dt>
                         <dd class="col-sm-8" th:text="${user.email}">email@example.com</dd>
@@ -100,7 +127,7 @@
     </div>
 
     <div class="mt-4">
-        <a href="/admin/users" class="btn btn-secondary">Back to Users List</a>
+        <a href="/admin/users-list" class="btn btn-secondary">Back to Users List</a>
     </div>
 </div>
 
