--- a/src/main/resources/templates/preference/list.html
+++ b/src/main/resources/templates/preference/list.html
@@ -5,6 +5,27 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">Surgeon Preferences</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/surgeons">Surgeons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/surgeons/new">Add Surgeon</a>
+                </li>
+            </ul>
+            <form th:action="@{/logout}" method="post" class="d-flex">
+                <button class="btn btn-outline-light" type="submit">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container mt-4">
     <h2>Preference Cards for <span th:text="${surgeon.firstName + ' ' + surgeon.lastName}"></span></h2>
 
@@ -27,12 +48,12 @@
             <button class="btn btn-outline-secondary" onclick="window.print()">
                 <i class="bi bi-printer"></i> Print
             </button>
-            <button class="btn btn-outline-secondary" onclick="exportToPDF()">
-                Export PDF
-            </button>
-            <button class="btn btn-outline-secondary" onclick="exportToExcel()">
-                Export Excel
-            </button>
+<!--            <button class="btn btn-outline-secondary" onclick="exportToPDF()">-->
+<!--                Export PDF-->
+<!--            </button>-->
+<!--            <button class="btn btn-outline-secondary" onclick="exportToExcel()">-->
+<!--                Export Excel-->
+<!--            </button>-->
         </div>
     </div>
 
