--- a/src/main/resources/templates/surgeon/view.html
+++ b/src/main/resources/templates/surgeon/view.html
@@ -5,6 +5,24 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">Surgeon Preferences</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/surgeons">Surgeons</a>
+                </li>
+            </ul>
+            <form th:action="@{/logout}" method="post" class="d-flex">
+                <button class="btn btn-outline-light" type="submit">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-8">
@@ -12,10 +30,10 @@
             <p class="text-muted" th:text="${surgeon.specialty}">Specialty</p>
         </div>
         <div class="col-md-4 text-end">
-            <a th:href="@{/surgeons/{id}/preferences(id=${surgeon.id})}"
-               class="btn btn-primary">View Preference Cards</a>
+<!--            <a th:href="@{/surgeons/{id}/preferences(id=${surgeon.id})}"-->
+<!--               class="btn btn-primary">View Preference Cards</a>-->
             <a th:href="@{/surgeons/{id}/edit(id=${surgeon.id})}"
-               class="btn btn-secondary">Edit</a>
+               class="btn btn-secondary">Edit Surgeon</a>
         </div>
     </div>
 
